Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-29335

KVStoreBench times out on CBNT

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • master
    • master, 5.5.0
    • couchbase-bucket
    • None
    • Untriaged
    • Unknown

    Description

      As seen in the last few CBNT builds, they have all been aborted due to timeouts caused by the KVStoreBench benchmark when running under RocksDB. Example build.

      19:20:07 KVStoreBench/Scan/100000/0                                    136404552 ns  136391925 ns          5   715.997k items/s Couchstore
      19:33:41 Build timed out (after 22 minutes). Marking the build as aborted.
      19:33:41 Build was aborted

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paolo.cocchi Paolo Cocchi
            tim.bradgate Tim Bradgate (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty