MB-29335 CouchRocks: KVStoreBench/Scan slow runtime on SetUp

The slow runtime on SetUp is caused by 'kvstore->commit()' being very
slow under CouchRocks. This is what happened:
1) We ran the test with no BucketQuota specified in configuration (the
default is 0);
2) We use the Bucket Quota to compute and set the CouchRocks
ColumnFamilyOptions.write_buffer_size. If bucket_quota==0 then
write_buffer_size=0
3) We put a limit on the size of a commit batch depending on the
write_buffer_size. If write_buffer_size==0 then we end up with a lot of
1-item batches. In the specific case, we called
'rocksdb::DB::Write(batch)' 100000 times.

To fix we set the Bucket Quota in configuration.

Change-Id: Ida1592d20ac86a9a089ebd83f733d1f7beeedac2
Reviewed-on: http://review.couchbase.org/93036
Reviewed-by: Tim Bradgate <tim.bradgate@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>